--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
  <div class="manual-section" id="trending-wheels" style="padding-bottom: 25px;">
      <h2 style="margin-top:0; text-align:center;">Trending Wheels</h2>
      <div class="trending-links-container">
-         <a href="yes-or-no-wheel.html" class="trending-link">
+         <a href="/" class="trending-link">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
             </svg>
@@ -272,8 +272,35 @@
              <span>Where / What to Eat Wheel</span>
          </a>
 
+        <a href="magic-8-ball-wheel.html" class="trending-link">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 9v.906a2.25 2.25 0 01-1.183 1.981l-6.478 3.488M2.25 9v.906a2.25 2.25 0 001.183 1.981l6.478 3.488m8.868-1.455L15 7.5m5.25 3.75L15 7.5m0 0L9.75 11.25m5.25-3.75L9.75 3.75m0 0L4.5 7.5m5.25-3.75L4.5 11.25m0 0L2.25 9.75M15 12l-3 3m0 0l-3-3m3 3V15" />
+            </svg>
+            <span>Magic 8-Ball Wheel</span>
+        </a>
+
+        <a href="dice-roller-wheel.html" class="trending-link">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
+            </svg>
+            <span>Dice Roller</span>
+        </a>
+
+        <a href="letter-randomizer-wheel.html" class="trending-link">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-1.5 3h1.5m-6.375 3h11.25c.621 0 1.125-.504 1.125-1.125V4.875c0-.621-.504-1.125-1.125-1.125H5.625c-.621 0-1.125.504-1.125 1.125v14.25c0 .621.504 1.125 1.125 1.125z" />
+            </svg>
+            <span>Letter Randomizer</span>
+        </a>
+        <a href="emotion-wheel.html" class="trending-link">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
+            </svg>
+            <span>Emotion Wheel / Feeling Wheel</span>
+        </a>
      </div>
- </div></div>
+ </div>
+</div>
         <div class="manual-section-wrapper" style="margin-bottom:0;">
         <div id="user-manual-main" class="manual-section">
             <h2>How to Use Spin The Wheel!</h2>
@@ -599,6 +626,6 @@ A: You'll find a "Hide" checkbox in the header of the controls section. Ticking 
     <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-use.html">Terms of Use</a> | <a href="./user-guide.html">Help</a></p>
 </footer>
 
-    <script src="./static/js/truth-or-dare-wheel.js"></script>
+    <script src="./static/js/wheel.js"></script>
 </body>
 </html>
