--- a/magic-8-ball-wheel.html
+++ b/magic-8-ball-wheel.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Truth or Dare Wheel - Wheel Decide</title>
-    <meta name="description" content="Welcome to the Truth Or Dare Wheel! This tool is designed to bring a new level of random, chaotic fun to your favorite party game.">
+    <title>Magic 8-Ball Wheel - Wheel Decide</title>
+    <meta name="description" content="Ask a yes-no question and spin the Magic 8-Ball Wheel to get a mysterious and fun answer. Your digital oracle for all of life's questions.">
 
-    <meta property="og:title" content="Truth Or Dare Wheel - Wheel Decide">
-    <meta property="og:description" content="Welcome to the Truth Or Dare Wheel! This tool is designed to bring a new level of random, chaotic fun to your favorite party game.">
+    <meta property="og:title" content="Magic 8-Ball Wheel - Wheel Decide">
+    <meta property="og:description" content="Ask a yes-no question and spin the Magic 8-Ball Wheel to get a mysterious and fun answer. Your digital oracle for all of life's questions.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://spinwheelonline.org/truth-or-dare-wheel.html"> 
+    <meta property="og:url" content="https://spinwheelonline.org/magic-8-ball-wheel.html"> 
     <meta property="og:image" content="./static/img/namepickerwheel-1.png">
-    <meta property="og:image:alt" content="Truth Or Dare Wheel - Wheel Decide">
+    <meta property="og:image:alt" content="Magic 8-Ball Wheel - Wheel Decide">
     <meta property="og:site_name" content="Spin The Wheel">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Truth Or Dare Wheel - Wheel Decide">
-    <meta name="twitter:description" content="Welcome to the Truth Or Dare Wheel! This tool is designed to bring a new level of random, chaotic fun to your favorite party game.">
+    <meta name="twitter:title" content="Magic 8-Ball Wheel - Wheel Decide">
+    <meta name="twitter:description" content="Ask a yes-no question and spin the Magic 8-Ball Wheel to get a mysterious and fun answer. Your digital oracle for all of life's questions.">
     <meta name="twitter:image" content="./static/img/namepickerwheel-1.png">
 
-    <link rel="canonical" href="https://spinwheelonline.org/truth-or-dare-wheel.html">
+    <link rel="canonical" href="https://spinwheelonline.org/magic-8-ball-wheel.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -72,7 +72,7 @@
                     <div class="header-actions">
                         <div class="hide-controls-checkbox">
                             <input type="checkbox" id="hideControlsCheckbox">
-                            <label for="hideControlsCheckbox" id="hideControlsLabel">Hide</label>
+                            <label for="hideControlsLabel">Hide</label>
                         </div>
                         <button id="advancedSettingsButton" class="icon-button" title="Advanced Settings">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
@@ -155,7 +155,7 @@
                     </button>
                     <input type="file" id="fileInput" accept=".txt" style="display: none;">
                 </div>
-                <textarea id="itemsInput" rows="7" placeholder="Enter one item per line... (e.g., Apple or Banana : 2 for weight)"></textarea>
+                <textarea id="itemsInput" rows="7" placeholder="Enter your own answers, or use the classics!"></textarea>
                 <div id="resultsListArea" placeholder="Results will appear here..."></div>
                  <div class="theme-selector-container">
                     <label for="colorThemeSelect">Color Theme:</label>
@@ -165,7 +165,7 @@
                     <button id="updateButton">Update Wheel</button>
                     <button id="spinButton">Spin!</button>
                 </div>
-                <div class="result-display" id="resultDisplay">Spin to select!</div>
+                <div class="result-display" id="resultDisplay">Ask a question, then spin!</div>
             </div>
         </div>
         <button id="showControlsButton">Show Controls</button>
@@ -175,10 +175,10 @@
     <div class="modal-overlay" id="winnerModalOverlay">
         <div class="modal" id="winnerModal">
             <div class="modal-content">
-                <div class="modal-title-main">Congratulations!</div>
+                <div class="modal-title-main">The Oracle Says...</div>
                 <div class="winner-name" id="modalWinnerName">Winner Name</div>
                 <div class="modal-actions">
-                    <button class="modal-button-style delete" id="modalRemoveButton">Delete Winner</button>
+                    <button class="modal-button-style delete" id="modalRemoveButton" style="display:none;">Delete Winner</button>
                     <button class="modal-button-style close" id="modalCloseButton">Close</button>
                 </div>
             </div>
@@ -253,138 +253,47 @@
      </div>
  </div>
 </div>
+
         <div class="manual-section-wrapper" style="margin-bottom:0;">
         <div id="user-manual-main" class="manual-section">
-     <h2>How to Use the Truth Or Dare Wheel</h2>
+            <h2>How to Use the Magic 8-Ball Wheel</h2>
 
-     <h3 id="introduction">1. Introduction</h3>
-     <p>Welcome to the Truth Or Dare Wheel! This tool is designed to bring a new level of random, chaotic fun to your favorite party game. Instead of thinking up questions
-      or dares on the spot, simply load your lists, spin the wheel, and let fate decide! It's perfect for parties, social gatherings, and icebreaker events.</p>
-     <div class="placeholder-image">
-         <img src="./static/img/namepickerwheel-1.png" alt="The main interface of the Truth Or Dare Wheel">
-         <p>The main Truth Or Dare Wheel interface</p>
-     </div>
+            <h3 id="introduction">1. Introduction</h3>
+            <p>Welcome to the Magic 8-Ball Wheel, a digital twist on the classic fortune-telling toy! For decades, the Magic 8-Ball has provided answers to our most pressing yes-or-no questions. Now, you can get that same mysterious fun right here in your browser. It's the perfect tool for when you need a little nudge from the universe.</p>
+            <div class="placeholder-image">
+                <img src="./static/img/namepickerwheel-1.png" alt="The main interface of the Magic 8-Ball Wheel">
+                <p>The Magic 8-Ball Wheel interface</p>
+            </div>
 
-    <h3 id="gameplay-setup">2. Gameplay Setup: Managing Truths & Dares</h3>
-    <p>The key to a great game is having great lists. Since the wheel uses one list at a time, the best way to play is by preparing separate text files for your truths
-      and dares.</p>
-    <ol>
-        <li>Create two plain text files on your computer: <code>truths.txt</code> and <code>dares.txt</code>.</li>
-        <li>In each file, write one entry per line. For example, in <code>truths.txt</code>:
-            <br>
-            <code>What's the most embarrassing thing you've ever done?</code><br>
-            <code>If you could be invisible for a day, what would you do?</code>
-        </li>
-        <li>You can even add weights to make some options more likely! For a dare that's extra spicy, you could write: <code>Sing everything you say for the next 10
-      minutes : 3</code>. This dare will have three times the chance of being selected.</li>
-    </ol>
-    <p>Using the <strong>📥 Import</strong> and <strong>📤 Export</strong> buttons is the recommended way to quickly switch between your lists during the game.</p>
-    <div class="placeholder-image">
-        <img src="./static/img/shuffle-8.png" alt="Import and Export buttons are key for managing lists">
-        <p>Use Import/Export to swap between Truths and Dares</p>
-    </div>
-
-    <h3 id="gameplay-flow">3. Suggested Gameplay Flow</h3>
-    <p>Here is a recommended way to play the game for maximum fun and fairness:</p>
-    <ol>
-        <li><strong>Create a Player Wheel:</strong> First, enter the names of all players into the "Entries" text area and spin to see who goes first. Let's say the
-      winner is "Player A".</li>
-        <li><strong>Choose Truth or Dare:</strong> Player A now asks the person to their left (Player B), "Truth or Dare?".</li>
-        <li><strong>Load the Correct List:</strong> If Player B chooses "Dare", click the <strong>📥 Import</strong> button and select your <code>dares.txt</code> file.
-      If they choose "Truth", import your <code>truths.txt</code> file. The wheel will instantly update with the chosen list.</li>
-        <li><strong>Spin for the Task:</strong> Click <strong>"Spin!"</strong> to select a random task for Player B.</li>
-        <li><strong>Remove the Task:</strong> After the task is revealed, a "Congratulations!" modal will appear. Click the <strong>"Delete Winner"</strong> button. This
-      removes the task from the list, ensuring it won't be selected again in this game session. This is crucial for keeping the game fresh!</li>
-        <li><strong>Continue:</strong> Now it's Player B's turn to spin the Player Wheel (or simply ask the person to their left) and continue the cycle.</li>
-    </ol>
-    <div class="placeholder-image">
-        <img src="./static/img/winner-modal-13.png" alt="The Winner Modal with the important 'Delete Winner' button">
-        <p>Always use "Delete Winner" to remove a completed task</p>
-    </div>
-    <h3 id="customization">4. Customizing Your Wheel</h3>
-    <p>Just like the standard wheel, you can customize the look and feel to match your party's vibe!</p>
-    <ul>
-        <li><strong>Color Themes:</strong> Use the "Color Theme" dropdown to select a palette.</li>
-        <li><strong>Advanced Settings (⚙️)</strong> Click the gear icon to access more options.
+            <h3 id="how-to-use">2. How to Ask the Oracle</h3>
+            <p>Consulting the digital oracle is easy:</p>
+            <ol>
+                <li><strong>Focus on Your Question:</strong> Think of a yes-or-no question that you want an answer to. For example, "Should I get a haircut today?" or "Will my project be a success?"</li>
+                <li><strong>Spin the Wheel:</strong> With your question held firmly in your mind, click the big <strong>"Spin!"</strong> button or press the center of the wheel.</li>
+                <li><strong>Receive Your Answer:</strong> The wheel will spin and land on one of the classic, mysterious answers. A popup will reveal your fortune!</li>
+            </ol>
+            
+            <h3 id="customization">3. Customizing The Answers</h3>
+            <p>The wheel comes pre-loaded with classic Magic 8-Ball answers, but you can create your own set of responses for a personalized experience.</p>
             <ul>
-                <li><strong>Enable Sounds:</strong> Turn on sound effects for a more immersive experience.</li>
-                <li><strong>Spin Duration:</strong> Make the spin longer for more suspense!</li>
-                <li><strong>Fonts & Colors:</strong> Change the font, font size, and even set custom colors for specific segments on the wheel.</li>
+                <li><strong>Add Your Own Answers:</strong> Go to the <strong>"Entries"</strong> tab and type in any answers you want, one per line. You could create a wheel of positive affirmations, funny quotes, or anything else you can imagine.</li>
+                <li><strong>Change the Look:</strong> Use the "Color Theme" dropdown or the <strong>Advanced Settings (⚙️)</strong> to change the wheel's colors, fonts, and sounds.</li>
             </ul>
-        </li>
-    </ul>
-    <hr>
-            <p><em>Enjoy using Truth Or Dare Wheel - Wheel Decide!</em></p>
+            <hr>
+            <p><em>May all your questions be answered... mysteriously!</em></p>
         </div></div>
-<!-- START: ADDED USE CASES SECTION -->
-<div class="use-cases-section-wrapper container" id="new-section" style="display:none;">
-    <div class="w1080">
-    <h2>Spin The Wheel to make random choices</h2>
-    <div class="use-cases-grid">
 
-        <div class="use-case-card">
-            <div class="use-case-icon">🍽️</div>
-            <h3>What to Eat</h3>
-            <p>Can't decide? Let Spin the wheel help you choose your next meal and end daily dilemmas!</p>
-        </div>
-
-        <div class="use-case-card">
-            <div class="use-case-icon">🎲</div>
-            <h3>Truth or Dare</h3>
-            <p>Truth or Dare, or picking the next party game – let Spin the wheel add random fun to your gatherings.</p>
-        </div>
-
-        <div class="use-case-card">
-            <div class="use-case-icon">🧑‍🏫</div>
-            <h3>Random Name Picker</h3>
-            <p>Randomly select students for questions or activities, ensuring fairness and boosting engagement.</p>
-        </div>
-
-        <div class="use-case-card">
-            <div class="use-case-icon">✈️</div>
-            <h3>Wheel Spinner for Travel Destinations</h3>
-            <p>Have a few dream destinations? Use Spin the wheel to make that exciting, random choice!</p>
-        </div>
-
-        <div class="use-case-card">
-            <div class="use-case-icon">🎁</div>
-            <h3>Reward Wheel</h3>
-            <p>Give yourself a small, random reward after completing a task to boost motivation and surprise.</p>
-        </div>
-
-        <div class="use-case-card">
-            <div class="use-case-icon">🧹</div>
-            <h3>Wheel Of Chores</h3>
-            <p>Make assigning chores less tedious! Spin the wheel for a fun and fair way to decide who does what.</p>
-        </div>
-        
-        </div>
-    </div>
-</div>
-
-
-<div id="faq-section" class="manual-section container" style="display:none;margin-top:20px;">
-    <h2 id="faq-section">Frequently Asked Questions (FAQ)</h2>
+<div id="faq-section" class="manual-section container" style="margin-top:20px;display:none">
+    <h2>Frequently Asked Questions (FAQ)</h2>
     <ul>
-        <li><strong>Q: How do I manage both Truths and Dares with only one input box?</strong><br>
-            A: The best method is to use the <strong>📥 Import</strong> and <strong>📤 Export</strong> buttons. Keep your truths and dares in separate <code>.txt</code>
-      files on your computer. When a player chooses "Truth," you import the truth list. When they choose "Dare," you import the dare list.
+        <li><strong>Q: Are the answers from the Magic 8-Ball Wheel truly random?</strong><br>
+            A: Yes! The wheel uses a random algorithm to select a stopping point, making each answer an unbiased, random selection from the list of entries.
         </li>
-        <li><strong>Q: How do we prevent the same dare from being chosen twice?</strong><br>
-            A: After a dare (or truth) is selected, a pop-up window appears. Simply click the <strong>"Delete Winner"</strong> button. This removes the item from the
-      current list for the rest of the game.
+        <li><strong>Q: Can I add my own custom answers to the wheel?</strong><br>
+            A: Absolutely. The "Entries" text area is fully editable. You can delete the classic answers and type in your own list of responses to create a custom wheel for any purpose.
         </li>
-        <li><strong>Q: Can I make some dares more likely to be picked? (Weighted Entries)</strong><br>
-            A: Yes! When writing your list, use the format: <code>Task Name : Weight</code>. For example, <code>Do 10 pushups : 2</code> will have double the chance of
-      being selected compared to an item with no weight specified.
-        </li>
-        <li><strong>Q: Will our custom list of dares be saved if we close the browser?</strong><br>
-            A: Yes. The last list you had in the "Entries" text area is automatically saved in your browser's local storage. When you reopen the page, it will be
-      reloaded. To save a specific list permanently, use the <strong>📤 Export</strong> button to save it as a <code>.txt</code> file.
-        </li>
-        <li><strong>Q: Can I change the colors of the wheel?</strong><br>
-            A: Absolutely. You can either choose a pre-made "Color Theme" from the dropdown menu or open the <strong>Advanced Settings (⚙️</strong> to set custom colors
-      for the first 10 segments of your wheel.
+        <li><strong>Q: Will the wheel remember my custom answers?</strong><br>
+            A: Yes, your most recent list of entries is automatically saved in your browser's local storage. When you return to this page, your custom answers will be waiting for you.
         </li>
     </ul>
 </div>
